# ArapaimaChess

./: CMakeLists.txt  README.md  chess.nn  opening_book.txt
src/: board.cpp  board.h  book.cpp  book.h  config.h  engine.cpp  engine.h  entry.cpp  entry.h  evaluate.cpp  evaluate.h  main.cpp  move_generator.cpp  move_generator.h  search.cpp  search.h  transposition_table.cpp  transposition_table.h  types.cpp  types.h  uci.cpp  uci.h  utils.cpp  utils.h  zobrist.cpp  zobrist.h
src/magics/: fixed.cpp  fixed.h  pext.cpp  pext.h
src/prng/: cgw64.cpp  cgw64.h
src/syzygy/: tbchess.c  tbconfig.h  tbprobe.c
